# reminder-bot

./: README.md  pyproject.toml
src/: bot.py
